--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.18.3",
     "concurrently": "^3.6.0",
     "express": "^4.16.3",
+    "express-favicon": "^2.0.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.2.1",
     "nodemon": "^1.17.5"
