--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "concurrently": "^3.6.0",
     "express": "^4.16.3",
     "express-favicon": "^2.0.1",
+    "google-maps-react": "^2.0.2",
     "if-env": "^1.0.4",
     "mongoose": "^5.2.1",
     "nodemon": "^1.17.5"
