communities tab working, needs database linking and user validation

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.2",
     "cheerio": "^1.0.0-rc.2",
     "concurrently": "^3.6.0",
     "connect-mongo": "^2.0.1",
@@ -37,6 +38,7 @@
     "express-session": "^1.15.6",
     "google-maps-react": "^2.0.2",
     "if-env": "^1.0.4",
+    "jquery": "^3.3.1",
     "mongoose": "^5.2.1",
     "nodemon": "^1.17.5",
     "react-scripts": "^1.1.4",
