--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mongoose": "^5.2.1",
     "nodemon": "^1.17.5",
     "react-scripts": "^1.1.4",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "startbootstrap-simple-sidebar": "^4.1.1"
   }
 }
