--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "nodemon": "^1.17.5",
     "react-scripts": "^1.1.4",
     "request": "^2.87.0",
-    "startbootstrap-simple-sidebar": "^4.1.1"
+    "startbootstrap-simple-sidebar": "^4.1.1",
+    "zipcodes": "^6.0.1"
   }
 }
