--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "axios": "^0.18.0",
     "google-maps-react": "^2.0.2",
     "react": "^16.4.1",
+    "react-bootstrap-modal": "^4.1.1",
+    "react-bootstrap4-modal": "^1.4.0",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
