--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
-    "install": "cd client && npm install;",
+    "install": "cd client && npm install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
@@ -28,25 +28,25 @@
   },
   "homepage": "https://github.com/NUcoding02Project3/my-neighborhood-health-3#readme",
   "dependencies": {
-    "ajv": "^6.5.2",
+    "ajv": "^6.6.2",
     "axios": "^0.18.0",
-    "bcrypt": "^3.0.0",
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
-    "bootstrap": "^4.1.2",
+    "bootstrap": "^4.2.1",
     "cheerio": "^1.0.0-rc.2",
-    "concurrently": "^3.6.0",
-    "connect-mongo": "^2.0.1",
-    "express": "^4.16.3",
+    "concurrently": "^3.6.1",
+    "connect-mongo": "^2.0.3",
+    "express": "^4.16.4",
     "express-favicon": "^2.0.1",
     "express-session": "^1.15.6",
     "google-maps-react": "^2.0.2",
     "if-env": "^1.0.4",
     "jquery": "^3.3.1",
-    "mongoose": "^5.2.1",
-    "nodemon": "^1.17.5",
-    "react-scripts": "^1.1.4",
-    "request": "^2.87.0",
+    "mongoose": "^5.4.0",
+    "nodemon": "^1.18.9",
+    "react-scripts": "^2.1.1",
+    "request": "^2.88.0",
     "startbootstrap-simple-sidebar": "^4.1.1",
-    "zipcodes": "^6.0.1"
+    "zipcodes": "^6.1.0"
   }
 }
