--- a/package.json
+++ b/package.json
@@ -30,21 +30,22 @@
   "dependencies": {
     "ajv": "^6.6.2",
     "axios": "^0.18.0",
-    "bcrypt": "^3.0.2",
+    "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.2.1",
     "cheerio": "^1.0.0-rc.2",
     "concurrently": "^3.6.1",
     "connect-mongo": "^2.0.3",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-favicon": "^2.0.1",
     "express-session": "^1.15.6",
     "google-maps-react": "^2.0.2",
     "if-env": "^1.0.4",
     "jquery": "^3.3.1",
-    "mongoose": "^5.4.0",
+    "mongoose": "^5.4.1",
     "nodemon": "^1.18.9",
-    "react-scripts": "^2.1.1",
+    "react-scripts": "^2.1.2",
     "request": "^2.88.0",
     "startbootstrap-simple-sidebar": "^4.1.1",
     "zipcodes": "^6.1.0"
