Update React Scripts in Client Prior to this change, the Client folder was using React Scripts 1.0.
This change updates React Scripts to 2.0. This should also solve the
problem of minifying code during Heroku builds.

--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,13 @@
     "axios": "^0.18.0",
     "dotenv": "^6.2.0",
     "google-maps-react": "^2.0.2",
-    "react": "^16.4.1",
-    "react-bootstrap-modal": "^4.1.1",
-    "react-bootstrap4-modal": "^1.4.0",
-    "react-dom": "^16.4.1",
+    "react": "^16.7.0",
+    "react-bootstrap-modal": "^4.2.0",
+    "react-bootstrap4-modal": "^1.7.0",
+    "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "zipcodes": "^6.0.1"
+    "react-scripts": "^2.1.2",
+    "zipcodes": "^6.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
