--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "ecmaVersion": 2018
   },
   "rules": {
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
   }
 }
